# UCSD_Renderer

./: CMakeLists.txt  README.md
Resources/Scenes/HW1/: scene7.test
Resources/Scenes/HW2/: analytic.test
Resources/Scenes/HW3/: cornellNEE.test  cornellRR.test  cornellSimple.test  dragon.test
Resources/Scenes/HW4/: cornellBRDF.test  cornellCosine.test  cornellMIS.test  dragon.test  ggx.test  mis.test
libs/: compress_images.ps1
src/: Camera.h  Film.h  Light.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  SpatialDatastructures.h  main.cpp
src/util/: VecMath.cpp  VecMath.h
